[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]


[project]
authors = [
    { name = "Bryce Boe", email = "bbzbryce@gmail.com" },
]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
description = "An extended version of Python's SimpleHTTPServer that supports https, authentication, rate limiting, and download resuming."
keywords = ["http authentication", "http rate limit", "http resume"]
license = "BSD-2-Clause"
license-files = ["LICENSE.txt"]
name = "ext_http_server"
readme = "README.md"
requires-python = ">=3.10"


[project.scripts]
ext_http_server = "ext_http_server:main"


[project.urls]
Homepage = "https://github.com/bboe/extended_http_server"


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.targets.wheel]
include = ["ext_http_server.py"]


[tool.ruff]
line-length = 100
target-version = "py310"


[tool.ruff.lint]
ignore = [
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "E", # pycodestyle errors
  "EM", # flake8-errmsg
  "EXE", # flake8-executable
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FLY", # flynt
  "G", # flake8-logging-format
  "I", # isort
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # pycodestyle warnings
]
